--- a/style.css
+++ b/style.css
@@ -97,3 +97,8 @@ footer {
   color: #777;
   margin-bottom: 10px;
 }
+.upcoming {
+  opacity: 0.6;
+  background-color: #f9f9f9;
+  border-style: dashed;
+}
