--- a/style.css
+++ b/style.css
@@ -116,3 +116,15 @@ footer {
   background-color: #1e1e1e;
   border-color: #333;
 }
+@media screen and (max-width: 768px) {
+  .project-card {
+    margin: 1rem 0;
+    padding: 1rem;
+    font-size: 1rem;
+  }
+
+  #darkModeToggle {
+    width: 100%;
+    margin-top: 10px;
+  }
+}
